# atlas

./: .envexample  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: error.rs  lib.rs  main.rs
src/app/: config.rs  mod.rs
src/web/: mod.rs  routes.rs  server.rs  templates.rs
templates/: base.html  page-view.html
