[package]
name = "atlas"
version = "0.1.0"
authors = ["Ahraman <ahraman.programming@gamil.com>"]

edition = "2024"
rust-version = "1.97.0"

[dependencies]
thiserror = "2.0.18"

tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }

axum = { version = "0.8.9", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["normalize-path", "fs"] }

dotenvy = "0.15.7"
askama = "0.16.0"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
